Update GatewayController.java