@@ -8,6 +8,7 @@ import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.server.ResponseStatusException;
 
+import java.util.Arrays;
 import java.util.List;
 
 @RestController
@@ -18,7 +19,7 @@ public class GatewayController {
         if(!gatewayKey.equals(AppConstant.ADMIN_TOKEN)){
             throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "You cannot consume this service. Please check your api key.");
         }
-        List<Routes> routes = List.of(
+        List<Routes> routes = Arrays.asList(
             new Routes(AppConstant.SERVICE_A_PATH, AppConstant.SERVICE_A_URI, AppConstant.SERVICE_A_KEY)
 //            , new Routes(AppConstant.SERVICE_B_PATH, AppConstant.SERVICE_B_URI, AppConstant.SERVICE_B_KEY)
         );
